Disable reflection warning for Java 9 and above